<resources>
    <!--App Name is managed in gradle build file => allow changing its name based on build variant-->
    <!--<string name="app_name" translatable="false">Live Objects Asset Demo</string>-->

    <string name="action_settings">Settings</string>
    <string name="client_connected">Client connected successfully</string>

    <string name="api_key">API Key</string>
    <string name="api_key_empty">No API Key</string>
    <string name="credentials">Credentials</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="client_id">Client Id</string>
    <string name="login_details">Login Details</string>
    <string name="username">Username</string>
    <string name="asset_id_imei">Asset Id (IMEI)</string>
    <string name="information">Information</string>
    <string name="model">Model</string>
    <string name="version">App Version</string>
    <string name="connection">Connection</string>
    <string name="host">Server</string>
    <string name="protocol">Protocol</string>
    <string name="reset_settings">Reset App Settings</string>
    <string name="router_mode">Router Mode (ON / OFF)</string>
    <string name="manual">Manual</string>
    <string name="qr_activity">Scan QR for API Key</string>
    <string name="scan_cancelled">Scan has been cancelled</string>
    <string name="api_key_scanned">Api Key Scanned:&#032;</string>
    <string name="please_insert_api_key">Please insert Api Key</string>
    <string name="disconnection">Disconnection</string>
    <string name="connecting">Connecting…</string>
    <string name="disconnecting">disconnecting</string>
    <string name="telemetry">Telemetry</string>
    <string name="temperature">Temperature</string>
    <string name="hydrometry">Hydrometry</string>
    <string name="revmin">Revolutions / min</string>
    <string name="CO2">CO2</string>
    <string name="pressure">Pressure</string>
    <string name="auto_on_manual_off">Auto</string>
    <string name="door_on_off">open/close</string>
    <string name="no_location_permissions">No permissions to get GPS or NETWORK location!</string>
    <string name="location">Location</string>
    <string name="door">Door</string>
    <string name="connection_error">Error when connecting to MQTT Server</string>
    <string name="publish_error">Unable to publish:&#032;</string>
    <string name="no_network_no_gps">No Nework or GPS enabled to get valid location</string>
    <string name="subscribe_error">Unable to subscribe to topic:</string>
    <string name="unsubscribe_error">Unable to unsubscribe to topic:</string>
    <string name="configuration">Configuration</string>
    <string name="device_config_refresh">Refresh: %1$d second(s)</string>
    <string name="device_config_log">Log level: %1$s </string>
    <string name="asset_command_buzzer_received">Command Buzzer Received</string>
    <string name="asset_command_open_door_received">Command Open door Received</string>
    <string name="asset_command_close_door_received">Command Close door Received</string>
    <string name="asset_command_reset_received">Command reset telemetry values</string>
    <string name="simulate">Simulate</string>
    <string name="settings">Settings</string>
    <string name="resources">Resources</string>
    <string name="log">Log</string>
    <string name="splash_screen">Splash Screen (firmware = xxx.png &lt; 15Kb)</string>
    <string name="new_version_found">New Version found: %1$s</string>
    <string name="update">Update</string>
    <string name="asset_new_resource_available">New asset\'s resource available for download</string>
    <string name="download_resource_error">Error when downloading the resource: %1$s</string>
    <string name="downloading">Downloading</string>
    <string name="connection_profile">Connection Profile</string>
    <string name="alert">Alert</string>
    <string name="no_permission_error">Sorry but the app requires the Permissions to be run.</string>
    <string name="ok">OK</string>

</resources>
