<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_white"
        android:title="@string/settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_simulate"
        android:enabled="true"
        android:icon="@drawable/ic_developer_mode_white"
        android:title="@string/simulate"
        app:showAsAction="always" />
   <item
        android:id="@+id/action_resources"
        android:enabled="true"
        android:icon="@drawable/ic_cloud_download_24dp"
        android:title="@string/resources"
        app:showAsAction="always" />

 <!--   <item
        android:id="@+id/action_log"
        android:enabled="true"
        android:icon="@drawable/ic_description_white"
        android:title="@string/log"
        android:visible="false"
        app:showAsAction="always" /> -->
</menu>